--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.file-size-threshold=1MB
 
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 #Mongo local
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=CSFAssessment
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+# spring.data.mongodb.database=CSFAssessment
