--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^15.2.0",
     "@angular/service-worker": "^15.2.0",
     "bootstrap": "^5.2.3",
+    "lottie-web": "^5.11.0",
+    "ngx-lottie": "^10.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
